--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,13 +35,17 @@ dist.jlink.output=${dist.jlink.dir}/Proyecto_1
 excludes=
 file.reference.java-cup-11b-runtime.jar=C:\\Users\\kevin\\Documents\\Librerias\\JFlex y Cup\\java-cup-11b-runtime.jar
 file.reference.java-cup-11b.jar=C:\\Users\\kevin\\Documents\\Librerias\\JFlex y Cup\\java-cup-11b.jar
+file.reference.jcommon-1.0.23.jar=C:\\Users\\kevin\\Documents\\Librerias\\lib\\jcommon-1.0.23.jar
 file.reference.jflex-1.9.1.jar=C:\\Users\\kevin\\Documents\\Librerias\\JFlex y Cup\\jflex-1.9.1.jar
+file.reference.jfreechart-1.0.19.jar=C:\\Users\\kevin\\Documents\\Librerias\\lib\\jfreechart-1.0.19.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.java-cup-11b-runtime.jar}:\
     ${file.reference.java-cup-11b.jar}:\
-    ${file.reference.jflex-1.9.1.jar}
+    ${file.reference.jflex-1.9.1.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
